tests/invalid/Old_Invalid_9.whiley
property broken(&int p) -> (bool r):
    *p == old(*p)

method m(&int x):
    //
    assert broken(x)